Fixed mobile nav z-index

--- a/index.css
+++ b/index.css
@@ -575,7 +575,7 @@ footer > p {
 }
 #mobile-nav {
   position: fixed;
-  z-index: 2;
+  z-index: 150;
   top: 0;
   right: -100%;
   height: 100%;
